force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/tc9_et__TCS_Variable_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>A custom setting used to allow Org level overrides of selected Time2Pay defined batch size limits</description>
    <label>Time2Pay Batch Size Overrides</label>
</CustomObject>