force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Batch_Limit_for_Bulk_Sending_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Batch_Limit_for_Bulk_Sending_Email__c</fullName>
    <description>Allows the apex batch size to be adjusted for when Bulk Sending Invoice Emails. The batch size defines how many Invoices will be sent per batch. When left blank the batch size of 5 will be used.</description>
    <inlineHelpText>Allows the apex batch size to be adjusted for when Bulk Sending Invoice Emails. The batch size defines how many Invoices will be sent per batch. When left blank the batch size of 5 will be used.</inlineHelpText>
    <label>Batch Limit for Bulk Sending Email</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>