force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Batch_size_for_assignment_rates_creation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Batch_size_for_assignment_rates_creation__c</fullName>
    <description>Limits the number of assignments rates to be processed per batch when bulk assignment rates are created under Assignment Template Group</description>
    <label>Batch size for assignment rates creation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>