force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Batch_size_for_assignment_rates_expire__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Batch_size_for_assignment_rates_expire__c</fullName>
    <label>Batch size for assignment rates expire</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>