force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Batch_size_for_back_pay_calculation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Batch_size_for_back_pay_calculation__c</fullName>
    <description>Limits the number of assignment rates to be processed per batch for creating back pay transactions</description>
    <inlineHelpText>Limits the number of assignment rates to be processed per batch for creating back pay transactions</inlineHelpText>
    <label>Batch size for back pay calculation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>