force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Batch_size_for_mpr_assignments__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Batch_size_for_mpr_assignments__c</fullName>
    <description>Limits the numbers of assignments to be processed per batch for assignment rate creation when bulk assignments/Minimum pay rates are created</description>
    <label>Batch size for mpr assignments</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>