force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Batch_size_for_payee_allowance_creation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Batch_size_for_payee_allowance_creation__c</fullName>
    <description>Limits the number of assignments to be processed per batch for payee allowance records creation based on  Payee Allowance template group</description>
    <label>Batch size for payee allowance creation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>