force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Batch_Size_to_process_rate_calc__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Batch_Size_to_process_rate_calc__c</fullName>
    <description>Limits the number of Rate Calculators to be processed per batch when pre-processing rate calculators for Rate Calculator Line generation(Batch_ProcessRateCalculatorGeneration). When left blank this will default to 15</description>
    <inlineHelpText>Limits the number of Rate Calculators to be processed per batch when pre-processing rate calculators for Rate Calculator Line generation(Batch_ProcessRateCalculatorGeneration). When left blank this will default to 15</inlineHelpText>
    <label>Batch Size to process rate calc</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>