force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Estimated_Interpretation_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Estimated_Interpretation_Batch_Size__c</fullName>
    <description>Defines how many Timesheets will be processed when the InvokeEstimatedInterpretationProcess is invoked. A max of 15 will be allowed by the invocable class. When left blank the default batch size of 5 will be used.</description>
    <inlineHelpText>Defines how many Timesheets will be processed when the InvokeEstimatedInterpretationProcess is invoked. A max of 15 will be allowed by the invocable class. When left blank the default batch size of 5 will be used.</inlineHelpText>
    <label>Estimated Interpretation Batch Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>