force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Generate_Rate_Calc_Line_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Generate_Rate_Calc_Line_Batch_Size__c</fullName>
    <description>Limits the number of Rate Calculators to be processed per batch when creating Rate Calculator Lines via the scheduled apex class. When left blank this will default to 5</description>
    <inlineHelpText>Limits the number of Rate Calculators to be processed per batch when creating Rate Calculator Lines via the scheduled apex class. When left blank this will default to 5</inlineHelpText>
    <label>Generate Rate Calc Line Batch Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>