force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Generate_Timesheet_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Generate_Timesheet_Batch_Size__c</fullName>
    <description>Allows the apex batch size to be lowered for Timesheet creation. The batch size defines how many Assignments will have their Timesheets created per batch. When left blank the batch size of 15 will be used.</description>
    <inlineHelpText>Allows the apex batch size to be lowered for Timesheet creation. The batch size defines how many Assignments will have their Timesheets created per batch. When left blank the batch size of 15 will be used.</inlineHelpText>
    <label>Generate Timesheet Batch Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>