force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Invoke_Rate_Calc_Creation_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoke_Rate_Calc_Creation_Batch_Size__c</fullName>
    <description>Sets the maximum number of Assignment ids allowed to be passed in via the global invocable class Invoke_RateCalcCreation so as to control the apex batch size for creation of employee specific rate calculators. If left blank a default batch size of 5 will be applied.</description>
    <inlineHelpText>Sets the maximum number of Assignment ids allowed to be passed in via the global invocable class Invoke_RateCalcCreation so as to control the apex batch size for creation of employee specific rate calculators. If left blank a default batch size of 5 will be applied.</inlineHelpText>
    <label>Invoke Rate Calc Creation Batch Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>