force-app/main/default/objects/tc9_et__TCS_Variable_Settings__c/fields/tc9_et__Payee_Community_User_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Payee_Community_User_Batch_Size__c</fullName>
    <description>Defines the batch size to create community users from the Payee Object</description>
    <inlineHelpText>Defines the batch size to create community users from the Payee Object</inlineHelpText>
    <label>Payee Community User Batch Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>